; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mbedtls/test/extr_test_apb_dport_access.c_apb_access_loop_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mbedtls/test/extr_test_apb_dport_access.c_apb_access_loop_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@apb_access_corrupt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @apb_access_loop_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apb_access_loop_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = call i32 @UART_DATE_REG(i32 0)
  %5 = call i64 @REG_READ(i32 %4)
  store i64 %5, i64* %3, align 8
  br label %6

6:                                                ; preds = %1, %12
  %7 = call i32 @UART_DATE_REG(i32 0)
  %8 = call i64 @REG_READ(i32 %7)
  %9 = load i64, i64* %3, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %6
  store i32 1, i32* @apb_access_corrupt, align 4
  br label %12

12:                                               ; preds = %11, %6
  br label %6
}

declare dso_local i64 @REG_READ(i32) #1

declare dso_local i32 @UART_DATE_REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
